--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <ignite.version>1.7.2</ignite.version>
+        <ignite.version>1.7.0</ignite.version>
         <spring.version>4.1.0.RELEASE</spring.version>
     </properties>
 
@@ -98,7 +98,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>pri.wenbo.Main</mainClass>
+                            <mainClass>org.apache.ignite.tests.IgnitePersistentStoreLoadTest</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
