--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <ignite.version>1.7.0</ignite.version>
+        <ignite.version>1.8.0.b2</ignite.version>
         <spring.version>4.1.0.RELEASE</spring.version>
     </properties>
 
