--- a/src/main/resources/tests.properties
+++ b/src/main/resources/tests.properties
@@ -17,17 +17,17 @@
 bulk.operation.size=1000
 
 # Number of simultaneous threads for each load test
-load.tests.threads.count=20
+load.tests.threads.count=1
 
 # Warm up period (in milliseconds) for each load test before starting any measurements
 load.tests.warmup.period=0
 
 # Time for each load test execution excluding warm up period (in milliseconds)
-load.tests.execution.time=300000
+load.tests.execution.time=3000000
 
 load.tests.execution.redo=0
 
 # Latency (in milliseconds) between two sequential requests to Cassandra/Ignite
 load.tests.requests.latency=0
 
-load.tests.db.count=10
+load.tests.db.count=1
